Special commit on dev: refactor on landing page sections to improve the current architecture.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -6,7 +6,7 @@
     "headline2": "I'm Lucas Padilha",
     "headlineWordLoop": {
       "1": "Software Engineer.",
-      "2": "Technology Consultant.",
+      "2": "Tech Consultant.",
       "3": "UX/UI Designer."
     },
     "downloadCTA": "Download CV"
