Added new buy me a coffee button, and fixed the animation on avatar.

--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -5,8 +5,8 @@
     "headline1": "Olá",
     "headline2": "Sou o Lucas Padilha",
     "headlineWordLoop": {
-      "1": "Engenheiro de Software.",
-      "2": "Consultor em tecnologia.",
+      "1": "Engenheiro IT.",
+      "2": "Consultor Tech.",
       "3": "Designer UX/UI."
     },
     "downloadCTA": "Download CV"
